# Reachy-mini-object-detection

./: Blog_draft.md  README.md  object_detection_standalone.ipynb
reachy_mini_object_detector/: .gitignore  README.md  index.html  pyproject.toml
reachy_mini_object_detector/reachy_mini_object_detector/: detector.py  main.py
reachy_mini_object_detector/reachy_mini_object_detector/static/: index.html  main.js  style.css
