[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"


[project]
name = "reachy_mini_object_detector"
version = "0.1.0"
description = "Real-time object detection for Reachy Mini using TensorFlow Hub. The robot tracks detected objects with its head and wiggles antennas on new discoveries."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "reachy-mini",
    "tensorflow>=2.15",
    "tensorflow-hub>=0.16",
    "opencv-python>=4.8",
    "numpy",
    "setuptools<81",
]
keywords = ["reachy-mini-app"]

[project.entry-points."reachy_mini_apps"]
reachy_mini_object_detector = "reachy_mini_object_detector.main:ReachyMiniObjectDetector"

[tool.setuptools]
package-dir = { "" = "." }
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
reachy_mini_object_detector = ["**/*"] # Also include all non-.py files